@@ -40,6 +40,10 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 ## Misc Improvements
 - `automelt`: is now more resistent to savegame corruption
+- `autodump`: reinstate ``autodump-destroy-item``, hotkey: Ctrl-K
+- `autodump`: new hotkey for ``autodump-destroy-here``: Ctrl-H
+- `dig`: new hotkeys for vein designation on z-level (Ctrl-V) and vein designation across z-levels (Ctrl-Shift-V)
+- `clean`: new hotkey for `spotclean`: Ctrl-C
 
 ## Documentation
 
